tests/snapshots/others_str_literal.snap
---
source: tests/others/ms.rs
expression: input
---
<math>
  <ms>
    Hello there
  </ms>
</math>

