tests/snapshots/others_table_matrix_augmented.snap
---
source: tests/others/mtable.rs
expression: out
---
<math><mfrac><mi>A</mi><mn>2</mn></mfrac><mo>=</mo><mrow><mo>(</mo><mtable columnlines="none solid none "><mtr><mtd><mn>1</mn></mtd><mtd><mn>2</mn></mtd><mtd><mn>3</mn></mtd></mtr><mtr><mtd><mn>4</mn></mtd><mtd><mn>5</mn></mtd><mtd><mn>6</mn></mtd></mtr><mtr><mtd><mn>7</mn></mtd><mtd><mn>8</mn></mtd><mtd><mn>9</mn></mtd></mtr></mtable><mo>)</mo></mrow></math>
