tests/snapshots/others_text.snap
---
source: tests/others/mtext.rs
expression: input
---
<math>
  <mtext>
    Hello world
  </mtext>
</math>

