tests/snapshots/radicals_root.snap
---
source: tests/radicals/mod.rs
expression: output
---
<math ><mroot ><mrow ><mn >1</mn><mo >+</mo><msubsup ><mi >n</mi><mn >2</mn><mn >3</mn></msubsup></mrow><mn >3</mn></mroot></math>
