tests/snapshots/subsup_many.snap
---
source: tests/scripted/mod.rs
expression: input
---
<math>
  <msubsup>
    <mo>
      ∫
    </mo>
    <mrow>
      <mo>
        (
      </mo>
      <mi>
        n
      </mi>
      <mo>
        =
      </mo>
      <mn>
        0
      </mn>
      <mo>
        )
      </mo>
    </mrow>
    <mrow>
      <mi>
        k
      </mi>
      <mo>
        +
      </mo>
      <mn>
        1
      </mn>
    </mrow>
  </msubsup>
</math>

